--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
 						<!-- Attitrash 1/2/2020 -->
 						<a href="img/album/walking2.jpg"
 							 data-ngthumb="img/album/walking2.jpg">Walking with out Akita Friends</a> 
+						<a href="img/album/halloween.jpg"
+							 data-ngthumb="img/album/halloween.jpg">Dressed up as Cosmo from the Fairly Odd Parents for Halloween</a>
           </div>
         </div>
       </div>
